--- a/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
+++ b/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
@@ -2,13 +2,13 @@
 
 <div class="floating-range p-2">
   <div class="floating-content">
-    <button class="btn btn-primary"> - </button>
-    <input type="range" class="form-range px-2" min="-2" max="18">
-    <button class="btn btn-primary"> + </button>
+    <button (click)="zoomOut()" class="btn btn-primary"> - </button>
+    <input #zoomInput (input)="zoomChanged(zoomInput.value)" type="range" class="form-range px-2" [value]="zoom" min="-2" max="18">
+    <button (click)="zoomIn()" class="btn btn-primary"> + </button>
   </div>
 
   <span class="form-label">
-    Zoom : {{10.123}}
+    Zoom : {{zoom | number:'2.2-2'}}
     <br>
     Lng, Lat {{'Something'}}
   </span>
