--- a/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
+++ b/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
@@ -10,6 +10,6 @@
   <span class="form-label">
     Zoom : {{zoom | number:'2.2-2'}}
     <br>
-    Lng, Lat {{'Something'}}
+    Lng, Lat {{currentLnglat}}
   </span>
 </div>
