--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -2,7 +2,7 @@
 
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let colorMarker of markers; let i = index"
-      [ngStyle]="{backgroundColor: colorMarker.color}" (dblclick)="deleteMarker(i)">
+      [ngStyle]="{backgroundColor: colorMarker.color}" (dblclick)="deleteMarker(i)" (click)="flyTo(colorMarker.marker)">
     Marker {{ i + 1}}
   </li>
 </ul>
