--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -13,8 +13,8 @@
       <!-- House -->
       <div *ngFor="let house of houses" class="col-4 mb-2">
         <div class="card">
-          <img src="..." class="card-img-top">
-
+<!--          <img src="..." class="card-img-top">-->
+          <maps-mini-map [lngLat]="house.lngLat" />
           <div class="card-body">
             <h5 class="card-title">{{house.title}}</h5>
             <p class="card-text">{{house.description}}</p>
