19. Standalone as Reusable component

--- a/src/app/alone/pages/alone-page/alone-page.component.html
+++ b/src/app/alone/pages/alone-page/alone-page.component.html
@@ -8,6 +8,8 @@
       <div class="col">
         <p>This component does not need to be imported into modules</p>
         <p>It's because it's own module.</p>
+
+        <counter-alone [counter]="25" />
       </div>
     </div>
   </div>
