--- a/src/app/alone/pages/alone-page/alone-page.component.html
+++ b/src/app/alone/pages/alone-page/alone-page.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <div class="col-2"></div>
+  <div class="col-2">
+    <side-menu />
+  </div>
   <div class="col-10">
     <h1>Standalone Component - Page</h1>
     <hr>
